kubernetes/apps/radarr/radarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
