kubernetes/apps/radarr/radarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  hostnames:
    - radarr.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          namespace: radarr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
